[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/inimigos/fases_neve/goblin_voador/goblin_voador2.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/goblin_voador.gd" type="Script" id=2]
[ext_resource path="res://sprites/inimigos/fases_neve/goblin_voador/goblin_voador1.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/fases_neve/goblin_voador/goblin_voador5.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/fases_neve/goblin_voador/goblin_voador6.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5592, 10 )

[sub_resource type="Animation" id=2]
resource_name = "goblin_andando"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "goblin_atirando"

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.678431 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.94855
height = 6.31215

[node name="goblin_voador" type="KinematicBody2D"]
z_index = 5
collision_layer = 0
collision_mask = 360
script = ExtResource( 2 )

[node name="rotacao" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="rotacao"]
position = Vector2( 0, 4.7247 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 20, 32 )

[node name="cannos" type="Node2D" parent="rotacao"]

[node name="Position2D" type="Position2D" parent="rotacao/cannos"]
position = Vector2( 21.85, 10 )
rotation = -1.5708

[node name="shape" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( 0, 7.58119 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/goblin_andando = SubResource( 2 )
anims/goblin_atirando = SubResource( 3 )
anims/goblin_voando = SubResource( 4 )
anims/planeta_rosa = SubResource( 5 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -12, 10 )
rotation = 1.5708
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 64

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 13, 10 )
rotation = -1.5708
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 64

[node name="FloorDetectorFloor" type="RayCast2D" parent="."]
position = Vector2( -0.292481, 13.0756 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 64

[node name="colidir_com_player" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="colidir_com_player"]
position = Vector2( -0.445946, 7.58119 )
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Timer" type="Timer" parent="." groups=[
"goblin_voador",
]]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_colidir_com_player_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
